// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignee/> render() should display teams only 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={false}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "Team 1",
              "decoration": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "User 1",
              "email": "email1@foo.com",
              "meta": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      />
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the email of the agent assigned as its name because it has no name 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "Team 1",
              "decoration": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="assigneeItem"
          tag="button"
          toggle={true}
        >
          <AgentLabel
            className="assigneeLabel"
            name="steve@acme.gorgias.io"
            profilePictureUrl=""
            shouldDisplayAvatar={true}
          />
          <i
            className="material-icons md-2"
            onClick={[Function]}
          >
            close
          </i>
        </DropdownItem>
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="Steve Frizeli"
      profilePictureUrl="profilePictureUrl"
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "Team 1",
              "decoration": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="assigneeItem"
          tag="button"
          toggle={true}
        >
          <AgentLabel
            className="assigneeLabel"
            name="Steve Frizeli"
            profilePictureUrl=""
            shouldDisplayAvatar={true}
          />
          <i
            className="material-icons md-2"
            onClick={[Function]}
          >
            close
          </i>
        </DropdownItem>
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned even if a team is assigned too 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="assigneeItem"
          tag="button"
          toggle={true}
        >
          <TeamLabel
            className="assigneeLabel"
            name="Team 1"
            shouldDisplayAvatar={true}
            shouldDisplayTeamIcon={true}
          />
          <i
            className="material-icons md-2"
            onClick={[Function]}
          >
            close
          </i>
        </DropdownItem>
        <DropdownItem
          className="assigneeItem"
          tag="button"
          toggle={true}
        >
          <AgentLabel
            className="assigneeLabel"
            name="steve@acme.gorgias.io"
            profilePictureUrl=""
            shouldDisplayAvatar={true}
          />
          <i
            className="material-icons md-2"
            onClick={[Function]}
          >
            close
          </i>
        </DropdownItem>
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the name of the team assigned because there is no user assigned 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <TeamLabel
      className=""
      maxWidth={100}
      name="Team 1"
      shouldDisplayAvatar={true}
      shouldDisplayTeamIcon={false}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "User 1",
              "email": "email1@foo.com",
              "meta": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="assigneeItem"
          tag="button"
          toggle={true}
        >
          <TeamLabel
            className="assigneeLabel"
            name="Team 1"
            shouldDisplayAvatar={true}
            shouldDisplayTeamIcon={true}
          />
          <i
            className="material-icons md-2"
            onClick={[Function]}
          >
            close
          </i>
        </DropdownItem>
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display users only 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={false}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "Team 1",
              "decoration": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "User 1",
              "email": "email1@foo.com",
              "meta": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display any agent info because there is no assignee 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={true}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "Team 1",
              "decoration": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "Team 2",
              "decoration": Immutable.Map {},
            },
          ]
        }
        users={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "User 1",
              "email": "email1@foo.com",
              "meta": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display teams because object is empty 1`] = `
<Dropdown
  a11y={false}
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
        "zIndex": 1051,
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <div>
      <PeopleSearchResults
        handleTeams={false}
        handleUsers={true}
        onTeamClick={[Function]}
        onUserClick={[Function]}
        teams={Immutable.List []}
        users={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "name": "User 1",
              "email": "email1@foo.com",
              "meta": Immutable.Map {},
            },
            Immutable.Map {
              "id": 2,
              "name": "User 2",
              "email": "email2@foo.com",
              "meta": Immutable.Map {},
            },
          ]
        }
      >
        <DropdownItem
          className="item"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Assign yourself
        </DropdownItem>
      </PeopleSearchResults>
    </div>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> should read data from the redux store correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(TicketAssigneeContainer)
    className="classname"
    currentAssigneeTeam={null}
    currentAssigneeUser={null}
    menuDirection="right"
    setTeam={[MockFunction]}
    setUser={[MockFunction]}
    transparent={false}
  >
    <TicketAssigneeContainer
      className="classname"
      currentAssigneeTeam={null}
      currentAssigneeUser={null}
      currentUser={
        Immutable.Map {
          "id": 1,
          "email": "steve@acme.gorgias.io",
        }
      }
      direction="down"
      dispatch={[Function]}
      handleTeams={true}
      handleUsers={true}
      menuDirection="right"
      setTeam={[MockFunction]}
      setUser={[MockFunction]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      transparent={false}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <Dropdown
        a11y={false}
        active={false}
        addonType={false}
        className="classname"
        direction="down"
        inNavbar={false}
        isOpen={false}
        nav={false}
        setActiveFromChild={false}
        toggle={[Function]}
      >
        <Manager>
          <div
            className="classname dropdown"
            onKeyDown={[Function]}
          >
            <DropdownToggle
              aria-haspopup={true}
              caret={true}
              className="toggle"
              color="secondary"
              type="button"
            >
              <Reference>
                <InnerReference
                  setReferenceNode={[Function]}
                >
                  <Button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="toggle dropdown-toggle"
                    color="secondary"
                    innerRef={[Function]}
                    onClick={[Function]}
                    tag="button"
                    type="button"
                  >
                    <button
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-label={null}
                      className="toggle dropdown-toggle btn btn-secondary"
                      onClick={[Function]}
                      type="button"
                    >
                      <span>
                        Unassigned
                      </span>
                    </button>
                  </Button>
                </InnerReference>
              </Reference>
            </DropdownToggle>
            <DropdownMenu
              flip={true}
              right={true}
              style={
                Object {
                  "width": "260px",
                  "zIndex": 1051,
                }
              }
              tag="div"
            >
              <div
                aria-hidden={true}
                className="dropdown-menu dropdown-menu-right"
                role="menu"
                style={
                  Object {
                    "width": "260px",
                    "zIndex": 1051,
                  }
                }
                tabIndex="-1"
              >
                <DropdownItem
                  header={true}
                  tag="button"
                  toggle={true}
                >
                  <h6
                    className="dropdown-header"
                    onClick={[Function]}
                    tabIndex="-1"
                  >
                    ASSIGN TO:
                  </h6>
                </DropdownItem>
                <DropdownItem
                  className="dropdown-item-input"
                  header={true}
                  tag="button"
                  toggle={true}
                >
                  <h6
                    className="dropdown-item-input dropdown-header"
                    onClick={[Function]}
                    tabIndex="-1"
                  />
                </DropdownItem>
                <div>
                  <PeopleSearchResults
                    handleTeams={true}
                    handleUsers={true}
                    onTeamClick={[Function]}
                    onUserClick={[Function]}
                    teams={
                      Immutable.Seq [
                        Immutable.Map {
                          "id": 1,
                          "name": "Team 1",
                          "decoration": Immutable.Map {},
                        },
                        Immutable.Map {
                          "id": 2,
                          "name": "Team 2",
                          "decoration": Immutable.Map {},
                        },
                      ]
                    }
                    users={
                      Immutable.List [
                        Immutable.Map {
                          "id": 1,
                          "name": "User 1",
                          "email": "email1@foo.com",
                          "meta": Immutable.Map {},
                        },
                        Immutable.Map {
                          "id": 2,
                          "name": "User 2",
                          "email": "email2@foo.com",
                          "meta": Immutable.Map {},
                        },
                      ]
                    }
                  >
                    <DropdownItem
                      className="item"
                      onClick={[Function]}
                      tag="button"
                      toggle={true}
                      type="button"
                    >
                      <button
                        className="item dropdown-item"
                        onClick={[Function]}
                        role="menuitem"
                        tabIndex="0"
                        type="button"
                      >
                        Assign yourself
                      </button>
                    </DropdownItem>
                    <DropdownItem
                      divider={true}
                      tag="button"
                      toggle={true}
                    >
                      <div
                        className="dropdown-divider"
                        onClick={[Function]}
                        tabIndex="-1"
                      />
                    </DropdownItem>
                    <TeamResults
                      onClick={[Function]}
                      teams={
                        Immutable.Seq [
                          Immutable.Map {
                            "id": 1,
                            "name": "Team 1",
                            "decoration": Immutable.Map {},
                          },
                          Immutable.Map {
                            "id": 2,
                            "name": "Team 2",
                            "decoration": Immutable.Map {},
                          },
                        ]
                      }
                    >
                      <DropdownItem
                        className="text-uppercase"
                        header={true}
                        tag="button"
                        toggle={true}
                      >
                        <h6
                          className="text-uppercase dropdown-header"
                          onClick={[Function]}
                          tabIndex="-1"
                        >
                          Teams
                        </h6>
                      </DropdownItem>
                      <div
                        className="items"
                      >
                        <DropdownItem
                          className="item"
                          key="1"
                          onClick={[Function]}
                          tag="button"
                          toggle={true}
                          type="button"
                        >
                          <button
                            className="item dropdown-item"
                            onClick={[Function]}
                            role="menuitem"
                            tabIndex="0"
                            type="button"
                          >
                            <TeamLabel
                              className=""
                              name="Team 1"
                              shouldDisplayAvatar={true}
                              shouldDisplayTeamIcon={false}
                            >
                              <div
                                className="TeamLabel"
                              >
                                <Avatar
                                  className="avatar"
                                  email=""
                                  name="Team 1"
                                  size={26}
                                  style={Object {}}
                                >
                                  <div
                                    className="component avatar"
                                    style={
                                      Object {
                                        "height": "26px",
                                        "width": "26px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "10.833333333333334px",
                                          "height": "26px",
                                          "width": "26px",
                                        }
                                      }
                                    >
                                      <span
                                        style={
                                          Object {
                                            "lineHeight": "28px",
                                          }
                                        }
                                      >
                                        T1
                                      </span>
                                    </div>
                                  </div>
                                </Avatar>
                                <span
                                  className="name"
                                  style={Object {}}
                                >
                                  Team 1
                                </span>
                              </div>
                            </TeamLabel>
                          </button>
                        </DropdownItem>
                        <DropdownItem
                          className="item"
                          key="2"
                          onClick={[Function]}
                          tag="button"
                          toggle={true}
                          type="button"
                        >
                          <button
                            className="item dropdown-item"
                            onClick={[Function]}
                            role="menuitem"
                            tabIndex="0"
                            type="button"
                          >
                            <TeamLabel
                              className=""
                              name="Team 2"
                              shouldDisplayAvatar={true}
                              shouldDisplayTeamIcon={false}
                            >
                              <div
                                className="TeamLabel"
                              >
                                <Avatar
                                  className="avatar"
                                  email=""
                                  name="Team 2"
                                  size={26}
                                  style={Object {}}
                                >
                                  <div
                                    className="component avatar"
                                    style={
                                      Object {
                                        "height": "26px",
                                        "width": "26px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "10.833333333333334px",
                                          "height": "26px",
                                          "width": "26px",
                                        }
                                      }
                                    >
                                      <span
                                        style={
                                          Object {
                                            "lineHeight": "28px",
                                          }
                                        }
                                      >
                                        T2
                                      </span>
                                    </div>
                                  </div>
                                </Avatar>
                                <span
                                  className="name"
                                  style={Object {}}
                                >
                                  Team 2
                                </span>
                              </div>
                            </TeamLabel>
                          </button>
                        </DropdownItem>
                      </div>
                    </TeamResults>
                    <DropdownItem
                      divider={true}
                      tag="button"
                      toggle={true}
                    >
                      <div
                        className="dropdown-divider"
                        onClick={[Function]}
                        tabIndex="-1"
                      />
                    </DropdownItem>
                    <UserResults
                      onClick={[Function]}
                      users={
                        Immutable.List [
                          Immutable.Map {
                            "id": 1,
                            "name": "User 1",
                            "email": "email1@foo.com",
                            "meta": Immutable.Map {},
                          },
                          Immutable.Map {
                            "id": 2,
                            "name": "User 2",
                            "email": "email2@foo.com",
                            "meta": Immutable.Map {},
                          },
                        ]
                      }
                    >
                      <DropdownItem
                        className="text-uppercase"
                        header={true}
                        tag="button"
                        toggle={true}
                      >
                        <h6
                          className="text-uppercase dropdown-header"
                          onClick={[Function]}
                          tabIndex="-1"
                        >
                          Users
                        </h6>
                      </DropdownItem>
                      <div
                        className="items"
                      >
                        <DropdownItem
                          className="item"
                          key="1"
                          onClick={[Function]}
                          tag="button"
                          toggle={true}
                          type="button"
                        >
                          <button
                            className="item dropdown-item"
                            onClick={[Function]}
                            role="menuitem"
                            tabIndex="0"
                            type="button"
                          >
                            <AgentLabel
                              className=""
                              name="User 1"
                              profilePictureUrl=""
                              shouldDisplayAvatar={true}
                            >
                              <div
                                className="AgentLabel"
                              >
                                <Avatar
                                  className="avatar"
                                  email=""
                                  name="User 1"
                                  size={26}
                                  style={Object {}}
                                  url=""
                                >
                                  <div
                                    className="component avatar"
                                    style={
                                      Object {
                                        "height": "26px",
                                        "width": "26px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "10.833333333333334px",
                                          "height": "26px",
                                          "width": "26px",
                                        }
                                      }
                                    >
                                      <span
                                        style={
                                          Object {
                                            "lineHeight": "28px",
                                          }
                                        }
                                      >
                                        U1
                                      </span>
                                    </div>
                                  </div>
                                </Avatar>
                                <span
                                  className="name"
                                  style={Object {}}
                                >
                                  User 1
                                </span>
                              </div>
                            </AgentLabel>
                          </button>
                        </DropdownItem>
                        <DropdownItem
                          className="item"
                          key="2"
                          onClick={[Function]}
                          tag="button"
                          toggle={true}
                          type="button"
                        >
                          <button
                            className="item dropdown-item"
                            onClick={[Function]}
                            role="menuitem"
                            tabIndex="0"
                            type="button"
                          >
                            <AgentLabel
                              className=""
                              name="User 2"
                              profilePictureUrl=""
                              shouldDisplayAvatar={true}
                            >
                              <div
                                className="AgentLabel"
                              >
                                <Avatar
                                  className="avatar"
                                  email=""
                                  name="User 2"
                                  size={26}
                                  style={Object {}}
                                  url=""
                                >
                                  <div
                                    className="component avatar"
                                    style={
                                      Object {
                                        "height": "26px",
                                        "width": "26px",
                                      }
                                    }
                                  >
                                    <div
                                      className="initials"
                                      style={
                                        Object {
                                          "fontSize": "10.833333333333334px",
                                          "height": "26px",
                                          "width": "26px",
                                        }
                                      }
                                    >
                                      <span
                                        style={
                                          Object {
                                            "lineHeight": "28px",
                                          }
                                        }
                                      >
                                        U2
                                      </span>
                                    </div>
                                  </div>
                                </Avatar>
                                <span
                                  className="name"
                                  style={Object {}}
                                >
                                  User 2
                                </span>
                              </div>
                            </AgentLabel>
                          </button>
                        </DropdownItem>
                      </div>
                    </UserResults>
                  </PeopleSearchResults>
                </div>
              </div>
            </DropdownMenu>
          </div>
        </Manager>
      </Dropdown>
    </TicketAssigneeContainer>
  </Connect(TicketAssigneeContainer)>
</Provider>
`;
